--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-Modest-Proposal--13-For-preventing-the-children-of-poor-people-in-Ireland-from-being-a-burde__1080
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Swift, Jonathan
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/326
     wikipedia: http://en.wikipedia.org/wiki/Jonathan_Swift
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1080#A-Modest-Proposal--13-For-preventing-the-children-of-poor-people-in-Ireland-from-being-a-burde_
 gutenberg_issued: '1997-10-01'
 gutenberg_type: Text
 identifiers:
